fix truncation of mdm server url value in about card

--- a/frontend/pages/hosts/details/cards/About/_styles.scss
+++ b/frontend/pages/hosts/details/cards/About/_styles.scss
@@ -57,7 +57,7 @@
 
       dd,
       .component__tooltip-wrapper__element {
-        max-width: 340px;
+        max-width: 245px;
       }
     }
 
